--- a/ui/pluto_control.ui
+++ b/ui/pluto_control.ui
@@ -41,7 +41,7 @@
        <rect>
         <x>10</x>
         <y>10</y>
-        <width>311</width>
+        <width>321</width>
         <height>181</height>
        </rect>
       </property>
@@ -84,7 +84,7 @@
        </property>
        <property name="geometry">
         <rect>
-         <x>120</x>
+         <x>20</x>
          <y>100</y>
          <width>89</width>
          <height>28</height>
@@ -97,25 +97,12 @@
         <bool>true</bool>
        </property>
       </widget>
-      <widget class="QLabel" name="connectionState">
-       <property name="geometry">
-        <rect>
-         <x>30</x>
-         <y>100</y>
-         <width>69</width>
-         <height>20</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>Status</string>
-       </property>
-      </widget>
       <widget class="QTextEdit" name="textEdit_version">
        <property name="geometry">
         <rect>
-         <x>170</x>
+         <x>20</x>
          <y>140</y>
-         <width>121</width>
+         <width>291</width>
          <height>31</height>
         </rect>
        </property>
@@ -124,27 +111,29 @@
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:12pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;V0.0&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+       </property>
+       <property name="placeholderText">
+        <string>pluto-pico version</string>
        </property>
       </widget>
-      <widget class="QTextEdit" name="tE_VersionDescr">
+      <widget class="QPushButton" name="pB_disconnect">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
        <property name="geometry">
         <rect>
-         <x>10</x>
-         <y>140</y>
-         <width>141</width>
-         <height>31</height>
+         <x>160</x>
+         <y>100</y>
+         <width>89</width>
+         <height>28</height>
         </rect>
        </property>
-       <property name="readOnly">
-        <bool>true</bool>
+       <property name="text">
+        <string>Disconnect</string>
        </property>
-       <property name="html">
-        <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
-&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
-p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:12pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;pluto-pico Version&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+       <property name="checkable">
+        <bool>true</bool>
        </property>
       </widget>
      </widget>
