--- a/ui/pluto_control.ui
+++ b/ui/pluto_control.ui
@@ -40,8 +40,8 @@
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>260</y>
-        <width>441</width>
+        <y>390</y>
+        <width>421</width>
         <height>231</height>
        </rect>
       </property>
@@ -77,7 +77,7 @@ p, li { white-space: pre-wrap; }
        </property>
        <property name="geometry">
         <rect>
-         <x>320</x>
+         <x>310</x>
          <y>30</y>
          <width>104</width>
          <height>31</height>
@@ -123,7 +123,7 @@ p, li { white-space: pre-wrap; }
        </property>
        <property name="geometry">
         <rect>
-         <x>320</x>
+         <x>310</x>
          <y>70</y>
          <width>104</width>
          <height>31</height>
@@ -169,7 +169,7 @@ p, li { white-space: pre-wrap; }
        </property>
        <property name="geometry">
         <rect>
-         <x>320</x>
+         <x>310</x>
          <y>110</y>
          <width>104</width>
          <height>31</height>
@@ -215,7 +215,7 @@ p, li { white-space: pre-wrap; }
        </property>
        <property name="geometry">
         <rect>
-         <x>320</x>
+         <x>310</x>
          <y>150</y>
          <width>104</width>
          <height>31</height>
@@ -238,7 +238,7 @@ p, li { white-space: pre-wrap; }
        </property>
        <property name="geometry">
         <rect>
-         <x>230</x>
+         <x>220</x>
          <y>190</y>
          <width>191</width>
          <height>28</height>
@@ -252,9 +252,9 @@ p, li { white-space: pre-wrap; }
      <widget class="QGroupBox" name="gB_TemperatureSensors">
       <property name="geometry">
        <rect>
-        <x>460</x>
+        <x>440</x>
         <y>260</y>
-        <width>441</width>
+        <width>351</width>
         <height>391</height>
        </rect>
       </property>
@@ -269,7 +269,7 @@ p, li { white-space: pre-wrap; }
         <rect>
          <x>0</x>
          <y>40</y>
-         <width>301</width>
+         <width>221</width>
          <height>31</height>
         </rect>
        </property>
@@ -290,7 +290,7 @@ p, li { white-space: pre-wrap; }
        </property>
        <property name="geometry">
         <rect>
-         <x>320</x>
+         <x>230</x>
          <y>40</y>
          <width>104</width>
          <height>31</height>
@@ -315,7 +315,7 @@ p, li { white-space: pre-wrap; }
         <rect>
          <x>0</x>
          <y>80</y>
-         <width>301</width>
+         <width>221</width>
          <height>31</height>
         </rect>
        </property>
@@ -336,7 +336,7 @@ p, li { white-space: pre-wrap; }
        </property>
        <property name="geometry">
         <rect>
-         <x>320</x>
+         <x>230</x>
          <y>80</y>
          <width>104</width>
          <height>31</height>
@@ -361,7 +361,7 @@ p, li { white-space: pre-wrap; }
         <rect>
          <x>0</x>
          <y>120</y>
-         <width>301</width>
+         <width>221</width>
          <height>31</height>
         </rect>
        </property>
@@ -382,7 +382,7 @@ p, li { white-space: pre-wrap; }
        </property>
        <property name="geometry">
         <rect>
-         <x>320</x>
+         <x>230</x>
          <y>120</y>
          <width>104</width>
          <height>31</height>
@@ -407,7 +407,7 @@ p, li { white-space: pre-wrap; }
         <rect>
          <x>0</x>
          <y>160</y>
-         <width>301</width>
+         <width>221</width>
          <height>31</height>
         </rect>
        </property>
@@ -428,7 +428,7 @@ p, li { white-space: pre-wrap; }
        </property>
        <property name="geometry">
         <rect>
-         <x>320</x>
+         <x>230</x>
          <y>160</y>
          <width>104</width>
          <height>31</height>
@@ -453,7 +453,7 @@ p, li { white-space: pre-wrap; }
         <rect>
          <x>0</x>
          <y>320</y>
-         <width>301</width>
+         <width>221</width>
          <height>31</height>
         </rect>
        </property>
@@ -474,7 +474,7 @@ p, li { white-space: pre-wrap; }
        </property>
        <property name="geometry">
         <rect>
-         <x>320</x>
+         <x>230</x>
          <y>320</y>
          <width>104</width>
          <height>31</height>
@@ -499,7 +499,7 @@ p, li { white-space: pre-wrap; }
         <rect>
          <x>0</x>
          <y>280</y>
-         <width>301</width>
+         <width>221</width>
          <height>31</height>
         </rect>
        </property>
@@ -520,7 +520,7 @@ p, li { white-space: pre-wrap; }
        </property>
        <property name="geometry">
         <rect>
-         <x>320</x>
+         <x>230</x>
          <y>280</y>
          <width>104</width>
          <height>31</height>
@@ -545,7 +545,7 @@ p, li { white-space: pre-wrap; }
         <rect>
          <x>0</x>
          <y>200</y>
-         <width>301</width>
+         <width>221</width>
          <height>31</height>
         </rect>
        </property>
@@ -566,7 +566,7 @@ p, li { white-space: pre-wrap; }
        </property>
        <property name="geometry">
         <rect>
-         <x>320</x>
+         <x>230</x>
          <y>200</y>
          <width>104</width>
          <height>31</height>
@@ -591,7 +591,7 @@ p, li { white-space: pre-wrap; }
         <rect>
          <x>0</x>
          <y>240</y>
-         <width>301</width>
+         <width>221</width>
          <height>31</height>
         </rect>
        </property>
@@ -612,7 +612,7 @@ p, li { white-space: pre-wrap; }
        </property>
        <property name="geometry">
         <rect>
-         <x>320</x>
+         <x>230</x>
          <y>240</y>
          <width>104</width>
          <height>31</height>
@@ -635,7 +635,7 @@ p, li { white-space: pre-wrap; }
        </property>
        <property name="geometry">
         <rect>
-         <x>230</x>
+         <x>140</x>
          <y>360</y>
          <width>191</width>
          <height>28</height>
@@ -650,8 +650,8 @@ p, li { white-space: pre-wrap; }
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>30</y>
-        <width>321</width>
+        <y>160</y>
+        <width>271</width>
         <height>231</height>
        </rect>
       </property>
@@ -710,7 +710,7 @@ p, li { white-space: pre-wrap; }
         <rect>
          <x>20</x>
          <y>140</y>
-         <width>291</width>
+         <width>241</width>
          <height>31</height>
         </rect>
        </property>
@@ -767,7 +767,7 @@ p, li { white-space: pre-wrap; }
      <widget class="QGroupBox" name="gB_Motors">
       <property name="geometry">
        <rect>
-        <x>520</x>
+        <x>480</x>
         <y>30</y>
         <width>331</width>
         <height>151</height>
@@ -888,7 +888,7 @@ p, li { white-space: pre-wrap; }
      <widget class="QGroupBox" name="gB_EmergencySwitch">
       <property name="geometry">
        <rect>
-        <x>520</x>
+        <x>480</x>
         <y>190</y>
         <width>331</width>
         <height>71</height>
@@ -947,7 +947,7 @@ p, li { white-space: pre-wrap; }
      <widget class="QGroupBox" name="gB_Control">
       <property name="geometry">
        <rect>
-        <x>340</x>
+        <x>300</x>
         <y>30</y>
         <width>171</width>
         <height>81</height>
@@ -979,7 +979,7 @@ p, li { white-space: pre-wrap; }
      <widget class="QGroupBox" name="groupBox_28">
       <property name="geometry">
        <rect>
-        <x>340</x>
+        <x>300</x>
         <y>110</y>
         <width>171</width>
         <height>151</height>
@@ -1127,44 +1127,90 @@ p, li { white-space: pre-wrap; }
        </property>
       </widget>
      </widget>
-     <widget class="QTextEdit" name="tE_pluto_control_version">
+     <widget class="QGroupBox" name="gB_pluto_control_version">
       <property name="geometry">
        <rect>
-        <x>900</x>
-        <y>10</y>
-        <width>291</width>
-        <height>31</height>
+        <x>10</x>
+        <y>30</y>
+        <width>281</width>
+        <height>111</height>
        </rect>
       </property>
-      <property name="html">
-       <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+      <property name="title">
+       <string>pluto-control</string>
+      </property>
+      <widget class="QTextEdit" name="tE_pluto_control_version">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>30</y>
+         <width>261</width>
+         <height>31</height>
+        </rect>
+       </property>
+       <property name="html">
+        <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:12pt; font-weight:400; font-style:normal;&quot;&gt;
 &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;pluto-control version: V0.1.0&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-      </property>
-      <property name="placeholderText">
-       <string/>
-      </property>
+       </property>
+       <property name="placeholderText">
+        <string/>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="pB_SaveConfig">
+       <property name="enabled">
+        <bool>true</bool>
+       </property>
+       <property name="geometry">
+        <rect>
+         <x>80</x>
+         <y>70</y>
+         <width>131</width>
+         <height>28</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Save Config</string>
+       </property>
+       <property name="checkable">
+        <bool>true</bool>
+       </property>
+      </widget>
      </widget>
-     <widget class="QPushButton" name="pB_SaveConfig">
-      <property name="enabled">
-       <bool>true</bool>
-      </property>
+     <widget class="QGroupBox" name="gB_pluto_control_version_2">
       <property name="geometry">
        <rect>
-        <x>900</x>
-        <y>50</y>
-        <width>131</width>
-        <height>28</height>
+        <x>820</x>
+        <y>40</y>
+        <width>351</width>
+        <height>601</height>
        </rect>
       </property>
-      <property name="text">
-       <string>Save Config</string>
+      <property name="title">
+       <string>Terminal</string>
       </property>
-      <property name="checkable">
-       <bool>true</bool>
-      </property>
+      <widget class="QTextEdit" name="tE_terminal">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>30</y>
+         <width>331</width>
+         <height>551</height>
+        </rect>
+       </property>
+       <property name="html">
+        <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:12pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+       </property>
+       <property name="placeholderText">
+        <string/>
+       </property>
+      </widget>
      </widget>
     </widget>
     <widget class="QWidget" name="tab_2">
